F-card: minor fixes (fixes #15) Footer: subscribe btn fixed on mobile

--- a/src/app/home/features/f-card/f-card.component.scss
+++ b/src/app/home/features/f-card/f-card.component.scss
@@ -19,8 +19,10 @@
   border-radius: 1rem;
   @include transition(all 300ms ease-in-out);
 
-  &:hover {
-    @include transform(translateY(-1rem));
+  @include media-breakpoint-up(lg){
+    &:hover {
+      @include transform(translateY(-1rem));
+    }
   }
 
   img {
