--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -47,12 +47,16 @@ footer {
         border: 0 none;
         //box-shadow: 0px 2px 8px 0px #a5a5a57a;
 
+        @include media-breakpoint-down(xs) {
+            padding: 1.5rem 4rem 1.5rem 1.5rem;
+        }
+
         &:focus {
             box-shadow: 0 0 0 0.2rem #ffb1002e;
         }
     }
 
-    #subscribeBtn {
+    .subscribeBtn {
         display: inline-block;
         position: relative;
         margin-right: 1%;
